src/test/deca/syntax/valid/sansObjet/integer.deca
{
    int a = 145116984;
}
