src/test/deca/syntax/invalid/sansObjet/BadString.deca
{
    String z = 'Hello 2020';
}